syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.thirulabs.chat.commons.proto";
option java_outer_classname = "MessageProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package org.thirulabs.chat.commons.proto;

message MessageID {
  int64 messageID = 1;
}

message Message {
  int64 messageID = 1;
  string message = 2;
  google.protobuf.Timestamp createdTS = 3;
  int64 likes = 4;
}

message MessageArray {
  repeated Message array = 1;
}